// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildDepGraphs fixtures non-hex includeDev=false, strict=false, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "umbrella_pkg@in_umbrella",
          },
          {
            "nodeId": "path_pkg@path",
          },
          {
            "nodeId": "git_tag@https://github.com/elixir-lang/gettext.git@0.1",
          },
          {
            "nodeId": "git_ref@https://github.com/elixir-lang/gettext.git@ref1",
          },
          {
            "nodeId": "git_branch@https://github.com/elixir-lang/gettext.git@branch1",
          },
          {
            "nodeId": "git_submodules@https://github.com/elixir-lang/gettext.git@HEAD",
          },
          {
            "nodeId": "git_sparse@https://github.com/elixir-lang/gettext.git@HEAD",
          },
          {
            "nodeId": "git_none@https://github.com/elixir-lang/gettext.git@HEAD",
          },
          {
            "nodeId": "github_tag@https://github.com/org/repo.git@0.1",
          },
          {
            "nodeId": "github_ref@https://github.com/org/repo.git@ref1",
          },
          {
            "nodeId": "github_branch@https://github.com/org/repo.git@branch1",
          },
          {
            "nodeId": "github_submodules@https://github.com/org/repo.git@HEAD",
          },
          {
            "nodeId": "github_sparse@https://github.com/org/repo.git@HEAD",
          },
          {
            "nodeId": "github_none@https://github.com/org/repo.git@HEAD",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "nonhex@0.0.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "umbrella_pkg@in_umbrella",
        "pkgId": "umbrella_pkg@in_umbrella",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "path": "../some_path",
            "scope": "prod",
          },
        },
        "nodeId": "path_pkg@path",
        "pkgId": "path_pkg@path",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "tag": "0.1",
          },
        },
        "nodeId": "git_tag@https://github.com/elixir-lang/gettext.git@0.1",
        "pkgId": "git_tag@https://github.com/elixir-lang/gettext.git@0.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "ref": "ref1",
            "scope": "prod",
          },
        },
        "nodeId": "git_ref@https://github.com/elixir-lang/gettext.git@ref1",
        "pkgId": "git_ref@https://github.com/elixir-lang/gettext.git@ref1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "branch": "branch1",
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "git_branch@https://github.com/elixir-lang/gettext.git@branch1",
        "pkgId": "git_branch@https://github.com/elixir-lang/gettext.git@branch1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "submodules": "submodules1",
          },
        },
        "nodeId": "git_submodules@https://github.com/elixir-lang/gettext.git@HEAD",
        "pkgId": "git_submodules@https://github.com/elixir-lang/gettext.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "sparse": "sparse1",
          },
        },
        "nodeId": "git_sparse@https://github.com/elixir-lang/gettext.git@HEAD",
        "pkgId": "git_sparse@https://github.com/elixir-lang/gettext.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "git_none@https://github.com/elixir-lang/gettext.git@HEAD",
        "pkgId": "git_none@https://github.com/elixir-lang/gettext.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "tag": "0.1",
          },
        },
        "nodeId": "github_tag@https://github.com/org/repo.git@0.1",
        "pkgId": "github_tag@https://github.com/org/repo.git@0.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "ref": "ref1",
            "scope": "prod",
          },
        },
        "nodeId": "github_ref@https://github.com/org/repo.git@ref1",
        "pkgId": "github_ref@https://github.com/org/repo.git@ref1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "branch": "branch1",
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "github_branch@https://github.com/org/repo.git@branch1",
        "pkgId": "github_branch@https://github.com/org/repo.git@branch1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "submodules": "submodules1",
          },
        },
        "nodeId": "github_submodules@https://github.com/org/repo.git@HEAD",
        "pkgId": "github_submodules@https://github.com/org/repo.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "sparse": "sparse1",
          },
        },
        "nodeId": "github_sparse@https://github.com/org/repo.git@HEAD",
        "pkgId": "github_sparse@https://github.com/org/repo.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "github_none@https://github.com/org/repo.git@HEAD",
        "pkgId": "github_none@https://github.com/org/repo.git@HEAD",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "nonhex@0.0.1",
      "info": {
        "name": "nonhex",
        "version": "0.0.1",
      },
    },
    {
      "id": "umbrella_pkg@in_umbrella",
      "info": {
        "name": "umbrella_pkg",
        "version": "in_umbrella",
      },
    },
    {
      "id": "path_pkg@path",
      "info": {
        "name": "path_pkg",
        "version": "path",
      },
    },
    {
      "id": "git_tag@https://github.com/elixir-lang/gettext.git@0.1",
      "info": {
        "name": "git_tag",
        "version": "https://github.com/elixir-lang/gettext.git@0.1",
      },
    },
    {
      "id": "git_ref@https://github.com/elixir-lang/gettext.git@ref1",
      "info": {
        "name": "git_ref",
        "version": "https://github.com/elixir-lang/gettext.git@ref1",
      },
    },
    {
      "id": "git_branch@https://github.com/elixir-lang/gettext.git@branch1",
      "info": {
        "name": "git_branch",
        "version": "https://github.com/elixir-lang/gettext.git@branch1",
      },
    },
    {
      "id": "git_submodules@https://github.com/elixir-lang/gettext.git@HEAD",
      "info": {
        "name": "git_submodules",
        "version": "https://github.com/elixir-lang/gettext.git@HEAD",
      },
    },
    {
      "id": "git_sparse@https://github.com/elixir-lang/gettext.git@HEAD",
      "info": {
        "name": "git_sparse",
        "version": "https://github.com/elixir-lang/gettext.git@HEAD",
      },
    },
    {
      "id": "git_none@https://github.com/elixir-lang/gettext.git@HEAD",
      "info": {
        "name": "git_none",
        "version": "https://github.com/elixir-lang/gettext.git@HEAD",
      },
    },
    {
      "id": "github_tag@https://github.com/org/repo.git@0.1",
      "info": {
        "name": "github_tag",
        "version": "https://github.com/org/repo.git@0.1",
      },
    },
    {
      "id": "github_ref@https://github.com/org/repo.git@ref1",
      "info": {
        "name": "github_ref",
        "version": "https://github.com/org/repo.git@ref1",
      },
    },
    {
      "id": "github_branch@https://github.com/org/repo.git@branch1",
      "info": {
        "name": "github_branch",
        "version": "https://github.com/org/repo.git@branch1",
      },
    },
    {
      "id": "github_submodules@https://github.com/org/repo.git@HEAD",
      "info": {
        "name": "github_submodules",
        "version": "https://github.com/org/repo.git@HEAD",
      },
    },
    {
      "id": "github_sparse@https://github.com/org/repo.git@HEAD",
      "info": {
        "name": "github_sparse",
        "version": "https://github.com/org/repo.git@HEAD",
      },
    },
    {
      "id": "github_none@https://github.com/org/repo.git@HEAD",
      "info": {
        "name": "github_none",
        "version": "https://github.com/org/repo.git@HEAD",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures non-hex includeDev=false, strict=true, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "umbrella_pkg@in_umbrella",
          },
          {
            "nodeId": "path_pkg@path",
          },
          {
            "nodeId": "git_tag@https://github.com/elixir-lang/gettext.git@0.1",
          },
          {
            "nodeId": "git_ref@https://github.com/elixir-lang/gettext.git@ref1",
          },
          {
            "nodeId": "git_branch@https://github.com/elixir-lang/gettext.git@branch1",
          },
          {
            "nodeId": "git_submodules@https://github.com/elixir-lang/gettext.git@HEAD",
          },
          {
            "nodeId": "git_sparse@https://github.com/elixir-lang/gettext.git@HEAD",
          },
          {
            "nodeId": "git_none@https://github.com/elixir-lang/gettext.git@HEAD",
          },
          {
            "nodeId": "github_tag@https://github.com/org/repo.git@0.1",
          },
          {
            "nodeId": "github_ref@https://github.com/org/repo.git@ref1",
          },
          {
            "nodeId": "github_branch@https://github.com/org/repo.git@branch1",
          },
          {
            "nodeId": "github_submodules@https://github.com/org/repo.git@HEAD",
          },
          {
            "nodeId": "github_sparse@https://github.com/org/repo.git@HEAD",
          },
          {
            "nodeId": "github_none@https://github.com/org/repo.git@HEAD",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "nonhex@0.0.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "umbrella_pkg@in_umbrella",
        "pkgId": "umbrella_pkg@in_umbrella",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "path": "../some_path",
            "scope": "prod",
          },
        },
        "nodeId": "path_pkg@path",
        "pkgId": "path_pkg@path",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "tag": "0.1",
          },
        },
        "nodeId": "git_tag@https://github.com/elixir-lang/gettext.git@0.1",
        "pkgId": "git_tag@https://github.com/elixir-lang/gettext.git@0.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "ref": "ref1",
            "scope": "prod",
          },
        },
        "nodeId": "git_ref@https://github.com/elixir-lang/gettext.git@ref1",
        "pkgId": "git_ref@https://github.com/elixir-lang/gettext.git@ref1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "branch": "branch1",
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "git_branch@https://github.com/elixir-lang/gettext.git@branch1",
        "pkgId": "git_branch@https://github.com/elixir-lang/gettext.git@branch1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "submodules": "submodules1",
          },
        },
        "nodeId": "git_submodules@https://github.com/elixir-lang/gettext.git@HEAD",
        "pkgId": "git_submodules@https://github.com/elixir-lang/gettext.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "sparse": "sparse1",
          },
        },
        "nodeId": "git_sparse@https://github.com/elixir-lang/gettext.git@HEAD",
        "pkgId": "git_sparse@https://github.com/elixir-lang/gettext.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "git": "https://github.com/elixir-lang/gettext.git",
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "git_none@https://github.com/elixir-lang/gettext.git@HEAD",
        "pkgId": "git_none@https://github.com/elixir-lang/gettext.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "tag": "0.1",
          },
        },
        "nodeId": "github_tag@https://github.com/org/repo.git@0.1",
        "pkgId": "github_tag@https://github.com/org/repo.git@0.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "ref": "ref1",
            "scope": "prod",
          },
        },
        "nodeId": "github_ref@https://github.com/org/repo.git@ref1",
        "pkgId": "github_ref@https://github.com/org/repo.git@ref1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "branch": "branch1",
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "github_branch@https://github.com/org/repo.git@branch1",
        "pkgId": "github_branch@https://github.com/org/repo.git@branch1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "submodules": "submodules1",
          },
        },
        "nodeId": "github_submodules@https://github.com/org/repo.git@HEAD",
        "pkgId": "github_submodules@https://github.com/org/repo.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
            "sparse": "sparse1",
          },
        },
        "nodeId": "github_sparse@https://github.com/org/repo.git@HEAD",
        "pkgId": "github_sparse@https://github.com/org/repo.git@HEAD",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "github": "org/repo",
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "github_none@https://github.com/org/repo.git@HEAD",
        "pkgId": "github_none@https://github.com/org/repo.git@HEAD",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "nonhex@0.0.1",
      "info": {
        "name": "nonhex",
        "version": "0.0.1",
      },
    },
    {
      "id": "umbrella_pkg@in_umbrella",
      "info": {
        "name": "umbrella_pkg",
        "version": "in_umbrella",
      },
    },
    {
      "id": "path_pkg@path",
      "info": {
        "name": "path_pkg",
        "version": "path",
      },
    },
    {
      "id": "git_tag@https://github.com/elixir-lang/gettext.git@0.1",
      "info": {
        "name": "git_tag",
        "version": "https://github.com/elixir-lang/gettext.git@0.1",
      },
    },
    {
      "id": "git_ref@https://github.com/elixir-lang/gettext.git@ref1",
      "info": {
        "name": "git_ref",
        "version": "https://github.com/elixir-lang/gettext.git@ref1",
      },
    },
    {
      "id": "git_branch@https://github.com/elixir-lang/gettext.git@branch1",
      "info": {
        "name": "git_branch",
        "version": "https://github.com/elixir-lang/gettext.git@branch1",
      },
    },
    {
      "id": "git_submodules@https://github.com/elixir-lang/gettext.git@HEAD",
      "info": {
        "name": "git_submodules",
        "version": "https://github.com/elixir-lang/gettext.git@HEAD",
      },
    },
    {
      "id": "git_sparse@https://github.com/elixir-lang/gettext.git@HEAD",
      "info": {
        "name": "git_sparse",
        "version": "https://github.com/elixir-lang/gettext.git@HEAD",
      },
    },
    {
      "id": "git_none@https://github.com/elixir-lang/gettext.git@HEAD",
      "info": {
        "name": "git_none",
        "version": "https://github.com/elixir-lang/gettext.git@HEAD",
      },
    },
    {
      "id": "github_tag@https://github.com/org/repo.git@0.1",
      "info": {
        "name": "github_tag",
        "version": "https://github.com/org/repo.git@0.1",
      },
    },
    {
      "id": "github_ref@https://github.com/org/repo.git@ref1",
      "info": {
        "name": "github_ref",
        "version": "https://github.com/org/repo.git@ref1",
      },
    },
    {
      "id": "github_branch@https://github.com/org/repo.git@branch1",
      "info": {
        "name": "github_branch",
        "version": "https://github.com/org/repo.git@branch1",
      },
    },
    {
      "id": "github_submodules@https://github.com/org/repo.git@HEAD",
      "info": {
        "name": "github_submodules",
        "version": "https://github.com/org/repo.git@HEAD",
      },
    },
    {
      "id": "github_sparse@https://github.com/org/repo.git@HEAD",
      "info": {
        "name": "github_sparse",
        "version": "https://github.com/org/repo.git@HEAD",
      },
    },
    {
      "id": "github_none@https://github.com/org/repo.git@HEAD",
      "info": {
        "name": "github_none",
        "version": "https://github.com/org/repo.git@HEAD",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures out-of-sync-top-level includeDev=false, strict=false, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "poolboy@1.5.2",
          },
          {
            "nodeId": "backoff@~> 1.1.6",
          },
          {
            "nodeId": "ecto@3.5.5",
          },
          {
            "nodeId": "dialyxir@1.1.0",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "snowflex@0.3.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poolboy@1.5.2",
        "pkgId": "poolboy@1.5.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "backoff@~> 1.1.6",
        "pkgId": "backoff@~> 1.1.6",
      },
      {
        "deps": [
          {
            "nodeId": "decimal@2.0.0",
          },
          {
            "nodeId": "telemetry@0.4.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ecto@3.5.5",
        "pkgId": "ecto@3.5.5",
      },
      {
        "deps": [
          {
            "nodeId": "erlex@0.2.6",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "dialyxir@1.1.0",
        "pkgId": "dialyxir@1.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "decimal@2.0.0",
        "pkgId": "decimal@2.0.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "telemetry@0.4.2",
        "pkgId": "telemetry@0.4.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "erlex@0.2.6",
        "pkgId": "erlex@0.2.6",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "snowflex@0.3.1",
      "info": {
        "name": "snowflex",
        "version": "0.3.1",
      },
    },
    {
      "id": "poolboy@1.5.2",
      "info": {
        "name": "poolboy",
        "version": "1.5.2",
      },
    },
    {
      "id": "backoff@~> 1.1.6",
      "info": {
        "name": "backoff",
        "version": "~> 1.1.6",
      },
    },
    {
      "id": "ecto@3.5.5",
      "info": {
        "name": "ecto",
        "version": "3.5.5",
      },
    },
    {
      "id": "dialyxir@1.1.0",
      "info": {
        "name": "dialyxir",
        "version": "1.1.0",
      },
    },
    {
      "id": "decimal@2.0.0",
      "info": {
        "name": "decimal",
        "version": "2.0.0",
      },
    },
    {
      "id": "telemetry@0.4.2",
      "info": {
        "name": "telemetry",
        "version": "0.4.2",
      },
    },
    {
      "id": "erlex@0.2.6",
      "info": {
        "name": "erlex",
        "version": "0.2.6",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures out-of-sync-top-level includeDev=true, strict=false, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "poolboy@1.5.2",
          },
          {
            "nodeId": "backoff@~> 1.1.6",
          },
          {
            "nodeId": "ecto@3.5.5",
          },
          {
            "nodeId": "dialyxir@1.1.0",
          },
          {
            "nodeId": "ex_doc@0.23.0",
          },
          {
            "nodeId": "meck@~> 0.9",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "snowflex@0.3.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poolboy@1.5.2",
        "pkgId": "poolboy@1.5.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "backoff@~> 1.1.6",
        "pkgId": "backoff@~> 1.1.6",
      },
      {
        "deps": [
          {
            "nodeId": "decimal@2.0.0",
          },
          {
            "nodeId": "telemetry@0.4.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ecto@3.5.5",
        "pkgId": "ecto@3.5.5",
      },
      {
        "deps": [
          {
            "nodeId": "erlex@0.2.6",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "dialyxir@1.1.0",
        "pkgId": "dialyxir@1.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "earmark_parser@1.4.10",
          },
          {
            "nodeId": "makeup_elixir@0.15.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "ex_doc@0.23.0",
        "pkgId": "ex_doc@0.23.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "dev",
          },
        },
        "nodeId": "meck@~> 0.9",
        "pkgId": "meck@~> 0.9",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "decimal@2.0.0",
        "pkgId": "decimal@2.0.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "telemetry@0.4.2",
        "pkgId": "telemetry@0.4.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "erlex@0.2.6",
        "pkgId": "erlex@0.2.6",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "earmark_parser@1.4.10",
        "pkgId": "earmark_parser@1.4.10",
      },
      {
        "deps": [
          {
            "nodeId": "makeup@1.0.5",
          },
          {
            "nodeId": "nimble_parsec@1.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "makeup_elixir@0.15.0",
        "pkgId": "makeup_elixir@0.15.0",
      },
      {
        "deps": [
          {
            "nodeId": "nimble_parsec@1.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "makeup@1.0.5",
        "pkgId": "makeup@1.0.5",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "nimble_parsec@1.1.0",
        "pkgId": "nimble_parsec@1.1.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "snowflex@0.3.1",
      "info": {
        "name": "snowflex",
        "version": "0.3.1",
      },
    },
    {
      "id": "poolboy@1.5.2",
      "info": {
        "name": "poolboy",
        "version": "1.5.2",
      },
    },
    {
      "id": "backoff@~> 1.1.6",
      "info": {
        "name": "backoff",
        "version": "~> 1.1.6",
      },
    },
    {
      "id": "ecto@3.5.5",
      "info": {
        "name": "ecto",
        "version": "3.5.5",
      },
    },
    {
      "id": "dialyxir@1.1.0",
      "info": {
        "name": "dialyxir",
        "version": "1.1.0",
      },
    },
    {
      "id": "ex_doc@0.23.0",
      "info": {
        "name": "ex_doc",
        "version": "0.23.0",
      },
    },
    {
      "id": "meck@~> 0.9",
      "info": {
        "name": "meck",
        "version": "~> 0.9",
      },
    },
    {
      "id": "decimal@2.0.0",
      "info": {
        "name": "decimal",
        "version": "2.0.0",
      },
    },
    {
      "id": "telemetry@0.4.2",
      "info": {
        "name": "telemetry",
        "version": "0.4.2",
      },
    },
    {
      "id": "erlex@0.2.6",
      "info": {
        "name": "erlex",
        "version": "0.2.6",
      },
    },
    {
      "id": "earmark_parser@1.4.10",
      "info": {
        "name": "earmark_parser",
        "version": "1.4.10",
      },
    },
    {
      "id": "makeup_elixir@0.15.0",
      "info": {
        "name": "makeup_elixir",
        "version": "0.15.0",
      },
    },
    {
      "id": "makeup@1.0.5",
      "info": {
        "name": "makeup",
        "version": "1.0.5",
      },
    },
    {
      "id": "nimble_parsec@1.1.0",
      "info": {
        "name": "nimble_parsec",
        "version": "1.1.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures simple includeDev=false, strict=false, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "poolboy@1.5.2",
          },
          {
            "nodeId": "backoff@1.1.6",
          },
          {
            "nodeId": "ecto@3.5.5",
          },
          {
            "nodeId": "dialyxir@1.1.0",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "snowflex@0.3.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poolboy@1.5.2",
        "pkgId": "poolboy@1.5.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "backoff@1.1.6",
        "pkgId": "backoff@1.1.6",
      },
      {
        "deps": [
          {
            "nodeId": "decimal@2.0.0",
          },
          {
            "nodeId": "telemetry@0.4.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ecto@3.5.5",
        "pkgId": "ecto@3.5.5",
      },
      {
        "deps": [
          {
            "nodeId": "erlex@0.2.6",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "dialyxir@1.1.0",
        "pkgId": "dialyxir@1.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "decimal@2.0.0",
        "pkgId": "decimal@2.0.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "telemetry@0.4.2",
        "pkgId": "telemetry@0.4.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "erlex@0.2.6",
        "pkgId": "erlex@0.2.6",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "snowflex@0.3.1",
      "info": {
        "name": "snowflex",
        "version": "0.3.1",
      },
    },
    {
      "id": "poolboy@1.5.2",
      "info": {
        "name": "poolboy",
        "version": "1.5.2",
      },
    },
    {
      "id": "backoff@1.1.6",
      "info": {
        "name": "backoff",
        "version": "1.1.6",
      },
    },
    {
      "id": "ecto@3.5.5",
      "info": {
        "name": "ecto",
        "version": "3.5.5",
      },
    },
    {
      "id": "dialyxir@1.1.0",
      "info": {
        "name": "dialyxir",
        "version": "1.1.0",
      },
    },
    {
      "id": "decimal@2.0.0",
      "info": {
        "name": "decimal",
        "version": "2.0.0",
      },
    },
    {
      "id": "telemetry@0.4.2",
      "info": {
        "name": "telemetry",
        "version": "0.4.2",
      },
    },
    {
      "id": "erlex@0.2.6",
      "info": {
        "name": "erlex",
        "version": "0.2.6",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures simple includeDev=false, strict=true, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "poolboy@1.5.2",
          },
          {
            "nodeId": "backoff@1.1.6",
          },
          {
            "nodeId": "ecto@3.5.5",
          },
          {
            "nodeId": "dialyxir@1.1.0",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "snowflex@0.3.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poolboy@1.5.2",
        "pkgId": "poolboy@1.5.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "backoff@1.1.6",
        "pkgId": "backoff@1.1.6",
      },
      {
        "deps": [
          {
            "nodeId": "decimal@2.0.0",
          },
          {
            "nodeId": "telemetry@0.4.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ecto@3.5.5",
        "pkgId": "ecto@3.5.5",
      },
      {
        "deps": [
          {
            "nodeId": "erlex@0.2.6",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "dialyxir@1.1.0",
        "pkgId": "dialyxir@1.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "decimal@2.0.0",
        "pkgId": "decimal@2.0.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "telemetry@0.4.2",
        "pkgId": "telemetry@0.4.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "erlex@0.2.6",
        "pkgId": "erlex@0.2.6",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "snowflex@0.3.1",
      "info": {
        "name": "snowflex",
        "version": "0.3.1",
      },
    },
    {
      "id": "poolboy@1.5.2",
      "info": {
        "name": "poolboy",
        "version": "1.5.2",
      },
    },
    {
      "id": "backoff@1.1.6",
      "info": {
        "name": "backoff",
        "version": "1.1.6",
      },
    },
    {
      "id": "ecto@3.5.5",
      "info": {
        "name": "ecto",
        "version": "3.5.5",
      },
    },
    {
      "id": "dialyxir@1.1.0",
      "info": {
        "name": "dialyxir",
        "version": "1.1.0",
      },
    },
    {
      "id": "decimal@2.0.0",
      "info": {
        "name": "decimal",
        "version": "2.0.0",
      },
    },
    {
      "id": "telemetry@0.4.2",
      "info": {
        "name": "telemetry",
        "version": "0.4.2",
      },
    },
    {
      "id": "erlex@0.2.6",
      "info": {
        "name": "erlex",
        "version": "0.2.6",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures simple includeDev=true, strict=false, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "poolboy@1.5.2",
          },
          {
            "nodeId": "backoff@1.1.6",
          },
          {
            "nodeId": "ecto@3.5.5",
          },
          {
            "nodeId": "dialyxir@1.1.0",
          },
          {
            "nodeId": "ex_doc@0.23.0",
          },
          {
            "nodeId": "meck@0.9.2",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "snowflex@0.3.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poolboy@1.5.2",
        "pkgId": "poolboy@1.5.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "backoff@1.1.6",
        "pkgId": "backoff@1.1.6",
      },
      {
        "deps": [
          {
            "nodeId": "decimal@2.0.0",
          },
          {
            "nodeId": "telemetry@0.4.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ecto@3.5.5",
        "pkgId": "ecto@3.5.5",
      },
      {
        "deps": [
          {
            "nodeId": "erlex@0.2.6",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "dialyxir@1.1.0",
        "pkgId": "dialyxir@1.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "earmark_parser@1.4.10",
          },
          {
            "nodeId": "makeup_elixir@0.15.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "ex_doc@0.23.0",
        "pkgId": "ex_doc@0.23.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "meck@0.9.2",
        "pkgId": "meck@0.9.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "decimal@2.0.0",
        "pkgId": "decimal@2.0.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "telemetry@0.4.2",
        "pkgId": "telemetry@0.4.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "erlex@0.2.6",
        "pkgId": "erlex@0.2.6",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "earmark_parser@1.4.10",
        "pkgId": "earmark_parser@1.4.10",
      },
      {
        "deps": [
          {
            "nodeId": "makeup@1.0.5",
          },
          {
            "nodeId": "nimble_parsec@1.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "makeup_elixir@0.15.0",
        "pkgId": "makeup_elixir@0.15.0",
      },
      {
        "deps": [
          {
            "nodeId": "nimble_parsec@1.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "makeup@1.0.5",
        "pkgId": "makeup@1.0.5",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "nimble_parsec@1.1.0",
        "pkgId": "nimble_parsec@1.1.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "snowflex@0.3.1",
      "info": {
        "name": "snowflex",
        "version": "0.3.1",
      },
    },
    {
      "id": "poolboy@1.5.2",
      "info": {
        "name": "poolboy",
        "version": "1.5.2",
      },
    },
    {
      "id": "backoff@1.1.6",
      "info": {
        "name": "backoff",
        "version": "1.1.6",
      },
    },
    {
      "id": "ecto@3.5.5",
      "info": {
        "name": "ecto",
        "version": "3.5.5",
      },
    },
    {
      "id": "dialyxir@1.1.0",
      "info": {
        "name": "dialyxir",
        "version": "1.1.0",
      },
    },
    {
      "id": "ex_doc@0.23.0",
      "info": {
        "name": "ex_doc",
        "version": "0.23.0",
      },
    },
    {
      "id": "meck@0.9.2",
      "info": {
        "name": "meck",
        "version": "0.9.2",
      },
    },
    {
      "id": "decimal@2.0.0",
      "info": {
        "name": "decimal",
        "version": "2.0.0",
      },
    },
    {
      "id": "telemetry@0.4.2",
      "info": {
        "name": "telemetry",
        "version": "0.4.2",
      },
    },
    {
      "id": "erlex@0.2.6",
      "info": {
        "name": "erlex",
        "version": "0.2.6",
      },
    },
    {
      "id": "earmark_parser@1.4.10",
      "info": {
        "name": "earmark_parser",
        "version": "1.4.10",
      },
    },
    {
      "id": "makeup_elixir@0.15.0",
      "info": {
        "name": "makeup_elixir",
        "version": "0.15.0",
      },
    },
    {
      "id": "makeup@1.0.5",
      "info": {
        "name": "makeup",
        "version": "1.0.5",
      },
    },
    {
      "id": "nimble_parsec@1.1.0",
      "info": {
        "name": "nimble_parsec",
        "version": "1.1.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures simple includeDev=true, strict=true, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "poolboy@1.5.2",
          },
          {
            "nodeId": "backoff@1.1.6",
          },
          {
            "nodeId": "ecto@3.5.5",
          },
          {
            "nodeId": "dialyxir@1.1.0",
          },
          {
            "nodeId": "ex_doc@0.23.0",
          },
          {
            "nodeId": "meck@0.9.2",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "snowflex@0.3.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poolboy@1.5.2",
        "pkgId": "poolboy@1.5.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "backoff@1.1.6",
        "pkgId": "backoff@1.1.6",
      },
      {
        "deps": [
          {
            "nodeId": "decimal@2.0.0",
          },
          {
            "nodeId": "telemetry@0.4.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ecto@3.5.5",
        "pkgId": "ecto@3.5.5",
      },
      {
        "deps": [
          {
            "nodeId": "erlex@0.2.6",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "dialyxir@1.1.0",
        "pkgId": "dialyxir@1.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "earmark_parser@1.4.10",
          },
          {
            "nodeId": "makeup_elixir@0.15.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "ex_doc@0.23.0",
        "pkgId": "ex_doc@0.23.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "meck@0.9.2",
        "pkgId": "meck@0.9.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "decimal@2.0.0",
        "pkgId": "decimal@2.0.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "telemetry@0.4.2",
        "pkgId": "telemetry@0.4.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "erlex@0.2.6",
        "pkgId": "erlex@0.2.6",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "earmark_parser@1.4.10",
        "pkgId": "earmark_parser@1.4.10",
      },
      {
        "deps": [
          {
            "nodeId": "makeup@1.0.5",
          },
          {
            "nodeId": "nimble_parsec@1.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "makeup_elixir@0.15.0",
        "pkgId": "makeup_elixir@0.15.0",
      },
      {
        "deps": [
          {
            "nodeId": "nimble_parsec@1.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "makeup@1.0.5",
        "pkgId": "makeup@1.0.5",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "dev",
          },
        },
        "nodeId": "nimble_parsec@1.1.0",
        "pkgId": "nimble_parsec@1.1.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "snowflex@0.3.1",
      "info": {
        "name": "snowflex",
        "version": "0.3.1",
      },
    },
    {
      "id": "poolboy@1.5.2",
      "info": {
        "name": "poolboy",
        "version": "1.5.2",
      },
    },
    {
      "id": "backoff@1.1.6",
      "info": {
        "name": "backoff",
        "version": "1.1.6",
      },
    },
    {
      "id": "ecto@3.5.5",
      "info": {
        "name": "ecto",
        "version": "3.5.5",
      },
    },
    {
      "id": "dialyxir@1.1.0",
      "info": {
        "name": "dialyxir",
        "version": "1.1.0",
      },
    },
    {
      "id": "ex_doc@0.23.0",
      "info": {
        "name": "ex_doc",
        "version": "0.23.0",
      },
    },
    {
      "id": "meck@0.9.2",
      "info": {
        "name": "meck",
        "version": "0.9.2",
      },
    },
    {
      "id": "decimal@2.0.0",
      "info": {
        "name": "decimal",
        "version": "2.0.0",
      },
    },
    {
      "id": "telemetry@0.4.2",
      "info": {
        "name": "telemetry",
        "version": "0.4.2",
      },
    },
    {
      "id": "erlex@0.2.6",
      "info": {
        "name": "erlex",
        "version": "0.2.6",
      },
    },
    {
      "id": "earmark_parser@1.4.10",
      "info": {
        "name": "earmark_parser",
        "version": "1.4.10",
      },
    },
    {
      "id": "makeup_elixir@0.15.0",
      "info": {
        "name": "makeup_elixir",
        "version": "0.15.0",
      },
    },
    {
      "id": "makeup@1.0.5",
      "info": {
        "name": "makeup",
        "version": "1.0.5",
      },
    },
    {
      "id": "nimble_parsec@1.1.0",
      "info": {
        "name": "nimble_parsec",
        "version": "1.1.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella includeDev=false, strict=false, allProjects=false: apps/api 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "dialyxir@~> 1.0",
          },
          {
            "nodeId": "core@in_umbrella",
          },
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "phoenix@1.3.4",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "sampleapp/apps/api@0.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "dialyxir@~> 1.0",
        "pkgId": "dialyxir@~> 1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "core@in_umbrella",
        "pkgId": "core@in_umbrella",
      },
      {
        "deps": [
          {
            "nodeId": "cowlib@1.0.2",
          },
          {
            "nodeId": "ranch@1.3.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "cowboy@1.1.2",
        "pkgId": "cowboy@1.1.2",
      },
      {
        "deps": [
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "phoenix_pubsub@1.1.0",
          },
          {
            "nodeId": "plug@1.6.3",
          },
          {
            "nodeId": "poison@3.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "phoenix@1.3.4",
        "pkgId": "phoenix@1.3.4",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "cowlib@1.0.2",
        "pkgId": "cowlib@1.0.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ranch@1.3.2",
        "pkgId": "ranch@1.3.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "phoenix_pubsub@1.1.0",
        "pkgId": "phoenix_pubsub@1.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "mime@1.3.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "plug@1.6.3",
        "pkgId": "plug@1.6.3",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poison@3.1.0",
        "pkgId": "poison@3.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "mime@1.3.0",
        "pkgId": "mime@1.3.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp/apps/api@0.1.0",
      "info": {
        "name": "sampleapp/apps/api",
        "version": "0.1.0",
      },
    },
    {
      "id": "dialyxir@~> 1.0",
      "info": {
        "name": "dialyxir",
        "version": "~> 1.0",
      },
    },
    {
      "id": "core@in_umbrella",
      "info": {
        "name": "core",
        "version": "in_umbrella",
      },
    },
    {
      "id": "cowboy@1.1.2",
      "info": {
        "name": "cowboy",
        "version": "1.1.2",
      },
    },
    {
      "id": "phoenix@1.3.4",
      "info": {
        "name": "phoenix",
        "version": "1.3.4",
      },
    },
    {
      "id": "cowlib@1.0.2",
      "info": {
        "name": "cowlib",
        "version": "1.0.2",
      },
    },
    {
      "id": "ranch@1.3.2",
      "info": {
        "name": "ranch",
        "version": "1.3.2",
      },
    },
    {
      "id": "phoenix_pubsub@1.1.0",
      "info": {
        "name": "phoenix_pubsub",
        "version": "1.1.0",
      },
    },
    {
      "id": "plug@1.6.3",
      "info": {
        "name": "plug",
        "version": "1.6.3",
      },
    },
    {
      "id": "poison@3.1.0",
      "info": {
        "name": "poison",
        "version": "3.1.0",
      },
    },
    {
      "id": "mime@1.3.0",
      "info": {
        "name": "mime",
        "version": "1.3.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella includeDev=false, strict=false, allProjects=false: apps/core 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "bcrypt_elixir@0.12.1",
          },
          {
            "nodeId": "comeonin@4.1.1",
          },
          {
            "nodeId": "ecto@2.2.10",
          },
          {
            "nodeId": "poison@3.1.0",
          },
          {
            "nodeId": "postgrex@0.13.5",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "sampleapp/apps/core@0.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "elixir_make@0.4.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "bcrypt_elixir@0.12.1",
        "pkgId": "bcrypt_elixir@0.12.1",
      },
      {
        "deps": [
          {
            "nodeId": "bcrypt_elixir@0.12.1",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "comeonin@4.1.1",
        "pkgId": "comeonin@4.1.1",
      },
      {
        "deps": [
          {
            "nodeId": "db_connection@1.1.3",
          },
          {
            "nodeId": "decimal@1.5.0",
          },
          {
            "nodeId": "poison@3.1.0",
          },
          {
            "nodeId": "poolboy@1.5.1",
          },
          {
            "nodeId": "postgrex@0.13.5",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ecto@2.2.10",
        "pkgId": "ecto@2.2.10",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poison@3.1.0",
        "pkgId": "poison@3.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "connection@1.0.4",
          },
          {
            "nodeId": "db_connection@1.1.3",
          },
          {
            "nodeId": "decimal@1.5.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "postgrex@0.13.5",
        "pkgId": "postgrex@0.13.5",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "elixir_make@0.4.2",
        "pkgId": "elixir_make@0.4.2",
      },
      {
        "deps": [
          {
            "nodeId": "connection@1.0.4",
          },
          {
            "nodeId": "poolboy@1.5.1",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "db_connection@1.1.3",
        "pkgId": "db_connection@1.1.3",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "decimal@1.5.0",
        "pkgId": "decimal@1.5.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poolboy@1.5.1",
        "pkgId": "poolboy@1.5.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "connection@1.0.4",
        "pkgId": "connection@1.0.4",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp/apps/core@0.1.0",
      "info": {
        "name": "sampleapp/apps/core",
        "version": "0.1.0",
      },
    },
    {
      "id": "bcrypt_elixir@0.12.1",
      "info": {
        "name": "bcrypt_elixir",
        "version": "0.12.1",
      },
    },
    {
      "id": "comeonin@4.1.1",
      "info": {
        "name": "comeonin",
        "version": "4.1.1",
      },
    },
    {
      "id": "ecto@2.2.10",
      "info": {
        "name": "ecto",
        "version": "2.2.10",
      },
    },
    {
      "id": "poison@3.1.0",
      "info": {
        "name": "poison",
        "version": "3.1.0",
      },
    },
    {
      "id": "postgrex@0.13.5",
      "info": {
        "name": "postgrex",
        "version": "0.13.5",
      },
    },
    {
      "id": "elixir_make@0.4.2",
      "info": {
        "name": "elixir_make",
        "version": "0.4.2",
      },
    },
    {
      "id": "db_connection@1.1.3",
      "info": {
        "name": "db_connection",
        "version": "1.1.3",
      },
    },
    {
      "id": "decimal@1.5.0",
      "info": {
        "name": "decimal",
        "version": "1.5.0",
      },
    },
    {
      "id": "poolboy@1.5.1",
      "info": {
        "name": "poolboy",
        "version": "1.5.1",
      },
    },
    {
      "id": "connection@1.0.4",
      "info": {
        "name": "connection",
        "version": "1.0.4",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella includeDev=false, strict=false, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [],
        "nodeId": "root-node",
        "pkgId": "sampleapp@0.0.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp@0.0.0",
      "info": {
        "name": "sampleapp",
        "version": "0.0.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella includeDev=false, strict=false, allProjects=true: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [],
        "nodeId": "root-node",
        "pkgId": "sampleapp@0.0.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp@0.0.0",
      "info": {
        "name": "sampleapp",
        "version": "0.0.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella includeDev=true, strict=false, allProjects=false: apps/api 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "dialyxir@~> 1.0",
          },
          {
            "nodeId": "core@in_umbrella",
          },
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "phoenix@1.3.4",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "sampleapp/apps/api@0.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "dialyxir@~> 1.0",
        "pkgId": "dialyxir@~> 1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "core@in_umbrella",
        "pkgId": "core@in_umbrella",
      },
      {
        "deps": [
          {
            "nodeId": "cowlib@1.0.2",
          },
          {
            "nodeId": "ranch@1.3.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "cowboy@1.1.2",
        "pkgId": "cowboy@1.1.2",
      },
      {
        "deps": [
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "phoenix_pubsub@1.1.0",
          },
          {
            "nodeId": "plug@1.6.3",
          },
          {
            "nodeId": "poison@3.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "phoenix@1.3.4",
        "pkgId": "phoenix@1.3.4",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "cowlib@1.0.2",
        "pkgId": "cowlib@1.0.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ranch@1.3.2",
        "pkgId": "ranch@1.3.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "phoenix_pubsub@1.1.0",
        "pkgId": "phoenix_pubsub@1.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "mime@1.3.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "plug@1.6.3",
        "pkgId": "plug@1.6.3",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poison@3.1.0",
        "pkgId": "poison@3.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "mime@1.3.0",
        "pkgId": "mime@1.3.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp/apps/api@0.1.0",
      "info": {
        "name": "sampleapp/apps/api",
        "version": "0.1.0",
      },
    },
    {
      "id": "dialyxir@~> 1.0",
      "info": {
        "name": "dialyxir",
        "version": "~> 1.0",
      },
    },
    {
      "id": "core@in_umbrella",
      "info": {
        "name": "core",
        "version": "in_umbrella",
      },
    },
    {
      "id": "cowboy@1.1.2",
      "info": {
        "name": "cowboy",
        "version": "1.1.2",
      },
    },
    {
      "id": "phoenix@1.3.4",
      "info": {
        "name": "phoenix",
        "version": "1.3.4",
      },
    },
    {
      "id": "cowlib@1.0.2",
      "info": {
        "name": "cowlib",
        "version": "1.0.2",
      },
    },
    {
      "id": "ranch@1.3.2",
      "info": {
        "name": "ranch",
        "version": "1.3.2",
      },
    },
    {
      "id": "phoenix_pubsub@1.1.0",
      "info": {
        "name": "phoenix_pubsub",
        "version": "1.1.0",
      },
    },
    {
      "id": "plug@1.6.3",
      "info": {
        "name": "plug",
        "version": "1.6.3",
      },
    },
    {
      "id": "poison@3.1.0",
      "info": {
        "name": "poison",
        "version": "3.1.0",
      },
    },
    {
      "id": "mime@1.3.0",
      "info": {
        "name": "mime",
        "version": "1.3.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella includeDev=true, strict=false, allProjects=false: apps/core 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "bcrypt_elixir@0.12.1",
          },
          {
            "nodeId": "comeonin@4.1.1",
          },
          {
            "nodeId": "ecto@2.2.10",
          },
          {
            "nodeId": "poison@3.1.0",
          },
          {
            "nodeId": "postgrex@0.13.5",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "sampleapp/apps/core@0.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "elixir_make@0.4.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "bcrypt_elixir@0.12.1",
        "pkgId": "bcrypt_elixir@0.12.1",
      },
      {
        "deps": [
          {
            "nodeId": "bcrypt_elixir@0.12.1",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "comeonin@4.1.1",
        "pkgId": "comeonin@4.1.1",
      },
      {
        "deps": [
          {
            "nodeId": "db_connection@1.1.3",
          },
          {
            "nodeId": "decimal@1.5.0",
          },
          {
            "nodeId": "poison@3.1.0",
          },
          {
            "nodeId": "poolboy@1.5.1",
          },
          {
            "nodeId": "postgrex@0.13.5",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ecto@2.2.10",
        "pkgId": "ecto@2.2.10",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poison@3.1.0",
        "pkgId": "poison@3.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "connection@1.0.4",
          },
          {
            "nodeId": "db_connection@1.1.3",
          },
          {
            "nodeId": "decimal@1.5.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "postgrex@0.13.5",
        "pkgId": "postgrex@0.13.5",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "elixir_make@0.4.2",
        "pkgId": "elixir_make@0.4.2",
      },
      {
        "deps": [
          {
            "nodeId": "connection@1.0.4",
          },
          {
            "nodeId": "poolboy@1.5.1",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "db_connection@1.1.3",
        "pkgId": "db_connection@1.1.3",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "decimal@1.5.0",
        "pkgId": "decimal@1.5.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poolboy@1.5.1",
        "pkgId": "poolboy@1.5.1",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "connection@1.0.4",
        "pkgId": "connection@1.0.4",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp/apps/core@0.1.0",
      "info": {
        "name": "sampleapp/apps/core",
        "version": "0.1.0",
      },
    },
    {
      "id": "bcrypt_elixir@0.12.1",
      "info": {
        "name": "bcrypt_elixir",
        "version": "0.12.1",
      },
    },
    {
      "id": "comeonin@4.1.1",
      "info": {
        "name": "comeonin",
        "version": "4.1.1",
      },
    },
    {
      "id": "ecto@2.2.10",
      "info": {
        "name": "ecto",
        "version": "2.2.10",
      },
    },
    {
      "id": "poison@3.1.0",
      "info": {
        "name": "poison",
        "version": "3.1.0",
      },
    },
    {
      "id": "postgrex@0.13.5",
      "info": {
        "name": "postgrex",
        "version": "0.13.5",
      },
    },
    {
      "id": "elixir_make@0.4.2",
      "info": {
        "name": "elixir_make",
        "version": "0.4.2",
      },
    },
    {
      "id": "db_connection@1.1.3",
      "info": {
        "name": "db_connection",
        "version": "1.1.3",
      },
    },
    {
      "id": "decimal@1.5.0",
      "info": {
        "name": "decimal",
        "version": "1.5.0",
      },
    },
    {
      "id": "poolboy@1.5.1",
      "info": {
        "name": "poolboy",
        "version": "1.5.1",
      },
    },
    {
      "id": "connection@1.0.4",
      "info": {
        "name": "connection",
        "version": "1.0.4",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella includeDev=true, strict=false, allProjects=false: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [],
        "nodeId": "root-node",
        "pkgId": "sampleapp@0.0.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp@0.0.0",
      "info": {
        "name": "sampleapp",
        "version": "0.0.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella includeDev=true, strict=false, allProjects=true: root 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [],
        "nodeId": "root-node",
        "pkgId": "sampleapp@0.0.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp@0.0.0",
      "info": {
        "name": "sampleapp",
        "version": "0.0.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;

exports[`buildDepGraphs fixtures umbrella/apps/api includeDev=true, strict=false, allProjects=false: apps/api 1`] = `
{
  "graph": {
    "nodes": [
      {
        "deps": [
          {
            "nodeId": "core@in_umbrella",
          },
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "phoenix@1.3.4",
          },
        ],
        "nodeId": "root-node",
        "pkgId": "sampleapp/apps/api@0.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "missingLockFileEntry": "true",
            "scope": "prod",
          },
        },
        "nodeId": "core@in_umbrella",
        "pkgId": "core@in_umbrella",
      },
      {
        "deps": [
          {
            "nodeId": "cowlib@1.0.2",
          },
          {
            "nodeId": "ranch@1.3.2",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "cowboy@1.1.2",
        "pkgId": "cowboy@1.1.2",
      },
      {
        "deps": [
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "phoenix_pubsub@1.1.0",
          },
          {
            "nodeId": "plug@1.6.3",
          },
          {
            "nodeId": "poison@3.1.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "phoenix@1.3.4",
        "pkgId": "phoenix@1.3.4",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "cowlib@1.0.2",
        "pkgId": "cowlib@1.0.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "ranch@1.3.2",
        "pkgId": "ranch@1.3.2",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "phoenix_pubsub@1.1.0",
        "pkgId": "phoenix_pubsub@1.1.0",
      },
      {
        "deps": [
          {
            "nodeId": "cowboy@1.1.2",
          },
          {
            "nodeId": "mime@1.3.0",
          },
        ],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "plug@1.6.3",
        "pkgId": "plug@1.6.3",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "poison@3.1.0",
        "pkgId": "poison@3.1.0",
      },
      {
        "deps": [],
        "info": {
          "labels": {
            "scope": "prod",
          },
        },
        "nodeId": "mime@1.3.0",
        "pkgId": "mime@1.3.0",
      },
    ],
    "rootNodeId": "root-node",
  },
  "pkgManager": {
    "name": "hex",
  },
  "pkgs": [
    {
      "id": "sampleapp/apps/api@0.1.0",
      "info": {
        "name": "sampleapp/apps/api",
        "version": "0.1.0",
      },
    },
    {
      "id": "core@in_umbrella",
      "info": {
        "name": "core",
        "version": "in_umbrella",
      },
    },
    {
      "id": "cowboy@1.1.2",
      "info": {
        "name": "cowboy",
        "version": "1.1.2",
      },
    },
    {
      "id": "phoenix@1.3.4",
      "info": {
        "name": "phoenix",
        "version": "1.3.4",
      },
    },
    {
      "id": "cowlib@1.0.2",
      "info": {
        "name": "cowlib",
        "version": "1.0.2",
      },
    },
    {
      "id": "ranch@1.3.2",
      "info": {
        "name": "ranch",
        "version": "1.3.2",
      },
    },
    {
      "id": "phoenix_pubsub@1.1.0",
      "info": {
        "name": "phoenix_pubsub",
        "version": "1.1.0",
      },
    },
    {
      "id": "plug@1.6.3",
      "info": {
        "name": "plug",
        "version": "1.6.3",
      },
    },
    {
      "id": "poison@3.1.0",
      "info": {
        "name": "poison",
        "version": "3.1.0",
      },
    },
    {
      "id": "mime@1.3.0",
      "info": {
        "name": "mime",
        "version": "1.3.0",
      },
    },
  ],
  "schemaVersion": "1.2.0",
}
`;
